Fixed header styling on small screen

--- a/TnTComponents/Styles/Components/_header.scss
+++ b/TnTComponents/Styles/Components/_header.scss
@@ -2,6 +2,8 @@
    min-height: 2.5rem;
    display: flex;
    align-items: center;
+   overflow: hidden;
+   white-space: nowrap;
 
    h1 {
       font-size: 2rem;
